body overflow fixed

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,7 @@
+body{
+    overflow: hidden;
+}
+
 .wall,.ball,#paddle,#env_container,#container,#brick_container,[class^='power-'] {
     z-index: 5;
     position: absolute;
